# ECS158-RayTracing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  RayTracing.sln  geo.c  geo.cc  geo.h  geo.hh  premake5.lua  readme.md  rt.cc
CudaRuntime1/: CudaRuntime1.vcxproj
RayTracing/: RayTracing.vcxproj  imgui.ini
RayTracing/src/: Camera.cpp  Camera.h  CudaRender.cu  CudaRender.h  Renderer.cpp  Renderer.h  Scene.h  WalnutApp.cpp  vec3.h
proposal/: proposal.tex
